// Copyright 2025 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "src/ray/protobuf/common.proto";

package ray.rpc.events;

// Message containing the lifecycle information of a task (can apply to both normal
// tasks and actor tasks).
message TaskLifecycleEvent {
  // task_id and task_attempt form the unique identifier of a task.
  bytes task_id = 1;
  int32 task_attempt = 2;

  // The task execution information

  message StateTransition {
    TaskStatus state = 1;
    google.protobuf.Timestamp timestamp = 2;
  }

  message TaskLogInfo {
    // stdout log file absolute path.
    string stdout_file = 1;
    // stderr log file absolute path.
    string stderr_file = 2;
    // Start offset of stdout when task starts.
    int64 stdout_start = 3;
    // End offset of stdout when task finishes.
    int64 stdout_end = 4;
    // Start offset of stderr when task starts.
    int64 stderr_start = 5;
    // End offset of stderr when task finishes.
    int64 stderr_end = 6;
  }

  repeated StateTransition state_transitions = 3;
  RayErrorInfo ray_error_info = 4;

  // The correlation ids of the task that can be used to correlate the task with
  // other events.
  bytes node_id = 5;
  bytes worker_id = 6;
  int32 worker_pid = 7;
  bytes job_id = 8;
  // Whether the task is paused by the debugger.
  optional bool is_debugger_paused = 9;
  // Actor task repr name, if applicable.
  optional string actor_repr_name = 10;
  // Task log file information.
  TaskLogInfo task_log_info = 11;
}
